Display the resized_image version,Add an allowlist of image extensions to be uploaded,Check the image size

--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -2,8 +2,9 @@
 
 <% if @user.image.present? %>
   <p>Here is your uploaded image:</p>
-  <!-- Display the image -->
-  <%= image_tag @user.image.url, alt: "Uploaded Image", width: "50%", height: "50%" %>
+
+  <!-- Display the resized_image version -->
+  <div><%= image_tag @user.image.url(:resized_image), alt: "Display resized image" %></div>
 
   <!-- Button to delete the image and redirect to root_path -->
   <%= form_with url: user_path(@user), method: :delete do %>
