--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Upload an Image</h1>
 
-<%= form_for @user, url: upload_image_path, html: { multipart: true } do |f| %>
+<%= form_for @user, url: upload_image_path, html: { multipart: true, data: { turbo: "true" } } do |f| %>
   <!-- Label for selecting an image to upload -->
   <%= f.label :image, "Select an image to upload" %>
   <!-- File input to upload the image -->
