Adding Histogram Chart of Black and White image version

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -9,6 +9,10 @@
   <%= f.file_field :image %>
   <!-- Submit button -->
   <%= f.submit "Upload Image" %>
+  <!-- Rendering Flash Messages -->
+  <% flash.each do |type, message| %>
+    <div class="flash <%= type %>"><%= message %></div>
+  <% end %>
 <% end %>
 
 
