--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,3 +1,4 @@
+
 <h1>Your Uploaded Image</h1>
 
 <% if @user.image.present? %>
@@ -5,11 +6,16 @@
 
   <!-- Display the resized_image version -->
   <div><%= image_tag @user.image.url(:thumb), alt: "Display resized image" %></div>
+  <!-- Display the Black and White image version -->
   <div><%= image_tag @user.image.url(:black_and_white), alt: "Black and White Image" %></div>
+  <!-- Display the Histogram of Black and White image version -->
+  <h2>Histogram of Black and White Image</h2>
+  <div style="height: 50%; width: 50%;"><canvas id="histogramChart" data-histogram="<%=  @histogram_data.to_json %>"></canvas>
+  </div>
 
   <!-- Button to delete the image and redirect to root_path -->
-  <%= form_with url: user_path(@user), method: :delete do %>
-    <%= button_to "Upload Another Image", delete_image_user_path(@user), method: :delete %>
+  <%= form_with url: user_path(@user), method: :delete do |f| %>
+    <%= f.submit "Upload Another Image", data: { confirm: "Are you sure you want to delete this image?" } %>
   <% end %>
 <% else %>
   <p>No image uploaded yet.</p>
