--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -2,12 +2,12 @@
   "name": "Picture",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/Picture_icon_COLORS.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "/icon.png",
+      "src": "/Picture_icon_COLORS.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
@@ -17,6 +17,6 @@
   "display": "standalone",
   "scope": "/",
   "description": "Picture.",
-  "theme_color": "red",
-  "background_color": "red"
+  "theme_color": "green",
+  "background_color": "green"
 }
