--- a/app/assets/stylesheets/show_page.css
+++ b/app/assets/stylesheets/show_page.css
@@ -73,7 +73,7 @@
     border-radius: 4px;                 /* Add rounded corners to soften the line */
     opacity: 0.7;                       /* Slight transparency for a softer look */
 }
-#histogramChart {
+#rgbScatterPlot,#histogramChart {
     width: 100% !important;             /* Ensures it takes full width */
     max-width: 800px;                   /* Limits max width */
     height: 400px !important;           /* Increases the height */
